# zenith

./: .gitignore  flake.nix  meson.build  pubspec.yaml
lib/: main.dart  platform_api.dart
lib/compositor/state/: compositor.dart  compositor.freezed.dart  subsurface_state.dart  subsurface_state.freezed.dart  surface_commit_state.dart  surface_commit_state.freezed.dart  surface_state.dart  surface_state.freezed.dart  xdg_popup_state.dart  xdg_popup_state.freezed.dart  xdg_surface_state.dart  xdg_surface_state.freezed.dart
lib/compositor/widgets/: surface.dart
lib/util/: raw_gesture_recognizer.dart
lib/zenith/: layout.dart  popup.dart  toplevel.dart  window_manager.dart
meson/: download_flutter_engine.sh  flutter_engine_revision.sh  install_assets.sh
nix/: flutter-elinux-engine.nix  wlroots.nix
src/: main.cpp  meson.build  output.cpp  output.hpp  server.cpp  server.hpp  surface_buffer_chain.hpp  swap_chain.hpp  swap_chain.tpp  wlr-includes.hpp  xwayland.cpp  xwayland.hpp  zenith_server_decoration.cpp  zenith_server_decoration.hpp  zenith_toplevel_decoration.cpp  zenith_toplevel_decoration.hpp
src/flutter_engine/: embedder_callbacks.cpp  embedder_callbacks.hpp  embedder_state.cpp  embedder_state.hpp  message_structs.hpp  platform_api.cpp
src/input/: keyboard.cpp  keyboard.hpp  pointer.cpp  pointer.hpp  text_input.hpp  touch.cpp  touch.hpp
src/surfaces/: zenith_subsurface.cpp  zenith_subsurface.hpp  zenith_surface.cpp  zenith_surface.hpp  zenith_xdg_popup.hpp  zenith_xdg_surface.cpp  zenith_xdg_surface.hpp  zenith_xdg_toplevel.cpp  zenith_xdg_toplevel.hpp
src/util/: debug.cpp  debug.hpp
src/util/egl/: create_shared_egl_context.cpp  create_shared_egl_context.hpp
src/util/embedder/: wayland_event_tracker.cpp
src/util/rethreading/: callable_queue.cpp  callable_queue.hpp
src/util/wlr/: scoped_wlr_buffer.cpp  scoped_wlr_buffer.hpp  wlr_extensions.cpp  wlr_helpers.cpp  wlr_helpers.hpp  xdg_surface_get_visible_bounds.hpp
